Updated sphere code to show scaling function and new modelview matrix

--- a/JavaScript/hello-webgl-again.html
+++ b/JavaScript/hello-webgl-again.html
@@ -52,9 +52,10 @@
             attribute vec3 vertexColor;
             varying vec4 finalVertexColor;
             uniform mat4 rotationMatrix;
+            uniform mat4 instanceMatrix;
 
             void main(void) {
-                gl_Position = rotationMatrix * vec4(vertexPosition, 1.0);
+                gl_Position = rotationMatrix * instanceMatrix * vec4(vertexPosition, 1.0);
                 finalVertexColor = vec4(vertexColor, 1.0);
             }
         </script>
